--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ name: KronosELO
 author: AL3XPI
 api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
 version: 1.0
-main: AL3XPI/ELOsystem
+main: AL3XPI/KronosELO
 # Commands:
 command:
 	elo:
